[gd_scene load_steps=7 format=3 uid="uid://1mf0og1h885p"]

[ext_resource type="Script" path="res://BorderRunnerSystem.gd" id="1_8vf2f"]
[ext_resource type="Script" path="res://ExplosionVFX.gd" id="2_1snt0"]
[ext_resource type="AudioStream" uid="uid://b6wmneh3xy7l5" path="res://assets/missiles/Doom Braaam.wav" id="3_8vf2f"]
[ext_resource type="AudioStream" uid="uid://cf65vwoewhpck" path="res://assets/missiles/Balloon Explosion A.wav" id="4_d84f0"]
[ext_resource type="AudioStream" uid="uid://dl551k0d7e4ga" path="res://assets/missiles/button press and missile launch.wav" id="5_cevxq"]
[ext_resource type="Texture2D" uid="uid://d0e44jundomwj" path="res://assets/missiles/missile_sprite.png" id="6_og870"]

[node name="BorderRunnerSystem" type="Node2D"]
script = ExtResource("1_8vf2f")
runner_chance = 0.08

[node name="ExplosionVFX" type="Node2D" parent="."]
z_index = 11
script = ExtResource("2_1snt0")
num_particles = 400
particle_size = 3

[node name="AlarmSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8vf2f")
volume_db = -5.0

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_d84f0")

[node name="MissileSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_cevxq")

[node name="MissileSprite" type="Sprite2D" parent="."]
z_index = 10
z_as_relative = false
scale = Vector2(0.05, 0.05)
texture = ExtResource("6_og870")
